tests/ui/enum/suggest-default-attribute.stderr
error: cannot find attribute `default` in this scope
  --> $DIR/suggest-default-attribute.rs:2:7
   |
LL |     #[default]
   |       ^^^^^^^
   |
help: consider adding a derive
   |
LL + #[derive(Default)]
LL | pub enum Test {
   |

error: aborting due to 1 previous error

